#408 fixed headers design-alignment

--- a/packages/web/src/components/spa/HackAUBG/JudgesSection/judges_section.css
+++ b/packages/web/src/components/spa/HackAUBG/JudgesSection/judges_section.css
@@ -37,7 +37,7 @@
 
 .judges-coming-soon-container {
     padding-top: 4%;
-    padding-bottom: 8%;
+    padding-bottom: 5%;
     color: white;
     text-align: center;
 }
