--- a/packages/web/src/components/spa/HackAUBG/MentorsSection/mentors_section.css
+++ b/packages/web/src/components/spa/HackAUBG/MentorsSection/mentors_section.css
@@ -36,7 +36,7 @@
 }
 
 .mentors-coming-soon-container {
-    padding-top: 15%;
+    padding-top: 10%;
     padding-bottom: 5%;
     color: white;
     text-align: center;
